[workspace]
members = [
    "programs/*"
]
resolver = "2"

[workspace.dependencies]
anchor-lang = { version = "0.30.1", features = [
  "init-if-needed",
]}
anchor-spl = { version = "0.30.1" }
spl-transfer-hook-interface = "0.5.0"
spl-tlv-account-resolution = "0.5.0"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
